feat: div into html and js

--- a/src/style/_search.scss
+++ b/src/style/_search.scss
@@ -1,8 +1,7 @@
 .container {
   position: relative;
-  font-family: Roboto, sans-serif;
 }
-.container input[type="text"] {
+.container {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
